--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -45,9 +45,9 @@
     "DDTerrNat" : "idDD Terrenos Naturales",
     "DDCategExpl" : "idDD Categorias Explanadas",
     "terrnatcbr" : "terreno natural_cbr",
-    "relleno" : "relleno",
+    "relleno" : "Relleno",
     "relleno_cbr" : "rellenocbr",
-    "coronacion" : "coronacion",
+    "coronacion" : "Coronacio",
     "coronacioncbr" : "coronacion_cbr",
     "VerDicTram" : "Veure/Editar diccionari de dades",
     "codigo" : "Codi",
@@ -108,5 +108,40 @@
     "FormatoKO": "L'arxiu ha de ser de tipus .xls o .xlsx.",
     "CarreteraKO": "El nom de la carretera no és vàlid.",
     "descPDF": "Vols descarregar el PDF",
-    "ActuacionKO": "Ja existeix l'actuació."
+    "ActuacionKO": "Ja existeix l'actuació.",
+    "MIni": "M Ini",
+    "DescIni": "Descripció Ini",
+    "MFin": "M Fin",
+    "DescFin": "Descripció Fin",
+    "TipCalz": "Tipus Calçada",
+    "OrgCons": "Organismes Conservació",
+    "OrgCom": "Organismes Competents",
+    "coment": "Comentari",
+    "long": "Longitud",
+    "FechAlt": "Data Alta",
+    "FechBaj": "Data Baixa",
+    "Firme": "Firme",
+    "Expl" : "Explanadas", 
+    "Afr" : "Aforaments",
+    "VisInfTra": "Visualització de la Informació de Tram",
+    "TramAntCrec": "<< Tram anterior creixent",
+    "TramAntDeCrec": "<< Tram anterior decreixent",
+    "TramSentCont": "Tram del sentit contrari",
+    "Editar": "Editar",
+    "TramPosCrec": "Tram posterior creixent >>",
+    "TramPosDeCrec": "Tram posterior decreixent >>",
+    "zonTer": "Zona Tèrmica",
+    "NilInf": "Nivell Influència",
+    "CPA": "CPA",
+    "AnchCar": "Ample Carril",
+    "AnchArc": "Ample Arcén",
+    "MPD": "Tipus Log Model Evol. MPD",
+    "PosIni": "Posició Inicial",
+    "PosFin": "Posició Final",
+    "Carril" : "Carril",
+    "Espesor" : "Espesor(cm)",
+    "arcen": "Arcén",
+    "terrnat" : "Terreno natural",
+    "cm": "cm",
+    "CategExpl" : "Categorias Explanada"
 }
