--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -45,9 +45,9 @@
     "DDTerrNat" : "idDD Terrenos Naturales",
     "DDCategExpl" : "idDD Categorias Explanadas",
     "terrnatcbr" : "terreno natural_cbr",
-    "relleno" : "relleno",
+    "relleno" : "Relleno",
     "relleno_cbr" : "rellenocbr",
-    "coronacion" : "coronacion",
+    "coronacion" : "Coronación",
     "coronacioncbr" : "coronacion_cbr",
     "VerDicTram" : "Ver/Editar diccionario de datos",
     "codigo" : "Código",
@@ -107,6 +107,41 @@
     "FormatoKO": "El archivo debe ser de tipo .xls o .xlsx.",
     "CarreteraKO": "El nombre de la carretera no es válido.",
     "ActuacionKO": "Ya existe la actuación.",
-    "descPDF": "Quieres descargar el PDF"
-
+    "descPDF": "Quieres descargar el PDF",
+    "MIni": "M Ini",
+    "DescIni": "Descripción Ini",
+    "MFin": "M Fin",
+    "DescFin": "Descripción Fin",
+    "TipCalz" : "Tipo Calzada",
+    "OrgCons": "Organismos Conservación",
+    "OrgCom": "Organismos Competentes",
+    "coment": "Comentario",
+    "long": "Longitud",
+    "FechAlt": "Fecha Alta",
+    "FechBaj": "Fecha Baja",
+    "Firme": "Firme",
+    "Expl" : "Explanadas",
+    "Afr": "Aforos",
+    "VisInfTra": "Visualización de la Información de Tramo",
+    "TramAntCrec": "<< Tramo anterior creciente",
+    "TramAntDeCrec": "<< Tramo anterior decreciente",
+    "TramSentCont": "Tramo del sentido contrario",
+    "Editar": "Editar",
+    "TramPosCrec": "Tramo posterior creciente >>",
+    "TramPosDeCrec": "Tramo posterior decreciente >>",
+    "zonTer": "Zona Térmica",
+    "NilInf": "Nivel Influencia",
+    "CPA": "CPA",
+    "AnchCar": "Ancho Carril",
+    "AnchArc": "Ancho Arcén",
+    "MPD": "Tipo Log Modelo Evol. MPD",
+    "PosIni": "Posición Inicial",
+    "PosFin": "Posición Final",
+    "Carril" : "Carril",
+    "Espesor" : "Espesor(cm)",
+    "arcen": "Arcén",
+    "terrnat": "Terreno natural",
+    "cbr": "CBR",
+    "cm": "cm",
+    "CategExpl" : "Categorias Explanada"
 }
