package.json, actuaciones y traducciones

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -110,43 +110,6 @@
     "CarreteraKO": "El nom de la carretera no és vàlid.",
     "descPDF": "Vols descarregar el PDF",
     "ActuacionKO": "Ja existeix l'actuació.",
-<<<<<<< HEAD
-    "MIni": "M Ini",
-    "DescIni": "Descripció Ini",
-    "MFin": "M Fin",
-    "DescFin": "Descripció Fin",
-    "TipCalz": "Tipus Calçada",
-    "OrgCons": "Organismes Conservació",
-    "OrgCom": "Organismes Competents",
-    "coment": "Comentari",
-    "long": "Longitud",
-    "FechAlt": "Data Alta",
-    "FechBaj": "Data Baixa",
-    "Firme": "Firme",
-    "Expl" : "Explanadas", 
-    "Afr" : "Aforaments",
-    "VisInfTra": "Visualització de la Informació de Tram",
-    "TramAntCrec": "<< Tram anterior creixent",
-    "TramAntDeCrec": "<< Tram anterior decreixent",
-    "TramSentCont": "Tram del sentit contrari",
-    "Editar": "Editar",
-    "TramPosCrec": "Tram posterior creixent >>",
-    "TramPosDeCrec": "Tram posterior decreixent >>",
-    "zonTer": "Zona Tèrmica",
-    "NilInf": "Nivell Influència",
-    "CPA": "CPA",
-    "AnchCar": "Ample Carril",
-    "AnchArc": "Ample Arcén",
-    "MPD": "Tipus Log Model Evol. MPD",
-    "PosIni": "Posició Inicial",
-    "PosFin": "Posició Final",
-    "Carril" : "Carril",
-    "Espesor" : "Espesor(cm)",
-    "arcen": "Arcén",
-    "terrnat" : "Terreno natural",
-    "cm": "cm",
-    "CategExpl" : "Categorias Explanada"
-=======
     "NivelesInfluencia": "Nivell d'Influència",
     "CPA": "CPA",
     "Carril": "Carril",
@@ -176,7 +139,40 @@
     "GuardarActuacionKO": "S'ha produït un error en guardar l'actuació.",
     "AnchCarril": "Amplària carril",
     "AnchArcen": "Amplària voral",
-    "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa."
+    "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
+    "TipoCalzKO": "Ha de seleccionar un tipus de calçada.",
+    "MIni": "M Ini",
+    "DescIni": "Descripció Ini",
+    "MFin": "M Fin",
+    "DescFin": "Descripció Fin",
+    "TipCalz": "Tipus Calçada",
+    "OrgCons": "Organismes Conservació",
+    "OrgCom": "Organismes Competents",
+    "coment": "Comentari",
+    "long": "Longitud",
+    "FechAlt": "Data Alta",
+    "FechBaj": "Data Baixa",
+    "Firme": "Firme",
+    "Expl" : "Explanadas", 
+    "Afr" : "Aforaments",
+    "VisInfTra": "Visualització de la Informació de Tram",
+    "TramAntCrec": "<< Tram anterior creixent",
+    "TramAntDeCrec": "<< Tram anterior decreixent",
+    "TramSentCont": "Tram del sentit contrari",
+    "Editar": "Editar",
+    "TramPosCrec": "Tram posterior creixent >>",
+    "TramPosDeCrec": "Tram posterior decreixent >>",
+    "zonTer": "Zona Tèrmica",
+    "NilInf": "Nivell Influència",
+    "AnchCar": "Ample Carril",
+    "AnchArc": "Ample Arcén",
+    "MPD": "Tipus Log Model Evol. MPD",
+    "PosIni": "Posició Inicial",
+    "PosFin": "Posició Final",
+    "arcen": "Arcén",
+    "terrnat" : "Terreno natural",
+    "cm": "cm",
+    "CategExpl" : "Categorias Explanada"
 
->>>>>>> d7e8d56568361e55cc3bd6024d6311c1d0159aa2
+
 }
