--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -108,44 +108,6 @@
     "CarreteraKO": "El nombre de la carretera no es válido.",
     "ActuacionKO": "Ya existe la actuación.",
     "descPDF": "Quieres descargar el PDF",
-<<<<<<< HEAD
-    "MIni": "M Ini",
-    "DescIni": "Descripción Ini",
-    "MFin": "M Fin",
-    "DescFin": "Descripción Fin",
-    "TipCalz" : "Tipo Calzada",
-    "OrgCons": "Organismos Conservación",
-    "OrgCom": "Organismos Competentes",
-    "coment": "Comentario",
-    "long": "Longitud",
-    "FechAlt": "Fecha Alta",
-    "FechBaj": "Fecha Baja",
-    "Firme": "Firme",
-    "Expl" : "Explanadas",
-    "Afr": "Aforos",
-    "VisInfTra": "Visualización de la Información de Tramo",
-    "TramAntCrec": "<< Tramo anterior creciente",
-    "TramAntDeCrec": "<< Tramo anterior decreciente",
-    "TramSentCont": "Tramo del sentido contrario",
-    "Editar": "Editar",
-    "TramPosCrec": "Tramo posterior creciente >>",
-    "TramPosDeCrec": "Tramo posterior decreciente >>",
-    "zonTer": "Zona Térmica",
-    "NilInf": "Nivel Influencia",
-    "CPA": "CPA",
-    "AnchCar": "Ancho Carril",
-    "AnchArc": "Ancho Arcén",
-    "MPD": "Tipo Log Modelo Evol. MPD",
-    "PosIni": "Posición Inicial",
-    "PosFin": "Posición Final",
-    "Carril" : "Carril",
-    "Espesor" : "Espesor(cm)",
-    "arcen": "Arcén",
-    "terrnat": "Terreno natural",
-    "cbr": "CBR",
-    "cm": "cm",
-    "CategExpl" : "Categorias Explanada"
-=======
     "NivelesInfluencia": "Nivel de Influencia",
     "CPA": "CPA",
     "Carril": "Carril",
@@ -176,7 +138,39 @@
     "GuardarActuacionKO": "Se ha producido un error al guardar la actuación.",
     "AnchCarril": "Anchura Carril",
     "AnchArcen": "Anchura Arcen",
-    "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa."
-
->>>>>>> d7e8d56568361e55cc3bd6024d6311c1d0159aa2
+    "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa.",
+    "TipoCalzKO": "Debe seleccionar un tipo de calzada.",
+    "MIni": "M Ini",
+    "DescIni": "Descripción Ini",
+    "MFin": "M Fin",
+    "DescFin": "Descripción Fin",
+    "TipCalz" : "Tipo Calzada",
+    "OrgCons": "Organismos Conservación",
+    "OrgCom": "Organismos Competentes",
+    "coment": "Comentario",
+    "long": "Longitud",
+    "FechAlt": "Fecha Alta",
+    "FechBaj": "Fecha Baja",
+    "Firme": "Firme",
+    "Expl" : "Explanadas",
+    "Afr": "Aforos",
+    "VisInfTra": "Visualización de la Información de Tramo",
+    "TramAntCrec": "<< Tramo anterior creciente",
+    "TramAntDeCrec": "<< Tramo anterior decreciente",
+    "TramSentCont": "Tramo del sentido contrario",
+    "Editar": "Editar",
+    "TramPosCrec": "Tramo posterior creciente >>",
+    "TramPosDeCrec": "Tramo posterior decreciente >>",
+    "zonTer": "Zona Térmica",
+    "NilInf": "Nivel Influencia",
+    "AnchCar": "Ancho Carril",
+    "AnchArc": "Ancho Arcén",
+    "MPD": "Tipo Log Modelo Evol. MPD",
+    "PosIni": "Posición Inicial",
+    "PosFin": "Posición Final",
+    "arcen": "Arcén",
+    "terrnat": "Terreno natural",
+    "cbr": "CBR",
+    "cm": "cm",
+    "CategExpl" : "Categorias Explanada"
 }
