Spinner, tramos y sidebar

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -110,7 +110,6 @@
     "CarreteraKO": "El nom de la carretera no és vàlid.",
     "descPDF": "Vols descarregar el PDF",
     "ActuacionKO": "Ja existeix l'actuació.",
-<<<<<<< HEAD
     "MIni": "M Ini",
     "DescIni": "Descripció Ini",
     "MFin": "M Fin",
@@ -145,12 +144,8 @@
     "arcen": "Arcén",
     "terrnat" : "Terreno natural",
     "cm": "cm",
-    "CategExpl" : "Categorias Explanada"
-=======
+    "CategExpl" : "Categorias Explanada",
     "NivelesInfluencia": "Nivell d'Influència",
-    "CPA": "CPA",
-    "Carril": "Carril",
-    "Espesor": "Gruix (cm)",
     "Arcen": "Voral",
     "Firmes": "Ferms",
     "Explanadas": "Esplanades",
@@ -176,7 +171,7 @@
     "GuardarActuacionKO": "S'ha produït un error en guardar l'actuació.",
     "AnchCarril": "Amplària carril",
     "AnchArcen": "Amplària voral",
-    "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa."
-
->>>>>>> d7e8d56568361e55cc3bd6024d6311c1d0159aa2
+    "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
+    "orden": "Ordre",
+    "sentido": "Sentit"
 }
