--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -108,7 +108,6 @@
     "CarreteraKO": "El nombre de la carretera no es válido.",
     "ActuacionKO": "Ya existe la actuación.",
     "descPDF": "Quieres descargar el PDF",
-<<<<<<< HEAD
     "MIni": "M Ini",
     "DescIni": "Descripción Ini",
     "MFin": "M Fin",
@@ -144,12 +143,8 @@
     "terrnat": "Terreno natural",
     "cbr": "CBR",
     "cm": "cm",
-    "CategExpl" : "Categorias Explanada"
-=======
+    "CategExpl" : "Categorias Explanada",
     "NivelesInfluencia": "Nivel de Influencia",
-    "CPA": "CPA",
-    "Carril": "Carril",
-    "Espesor": "Espesor (cm)",
     "Arcen": "Arcén",
     "Firmes": "Firmes",
     "Explanadas": "Explanadas",
@@ -176,7 +171,7 @@
     "GuardarActuacionKO": "Se ha producido un error al guardar la actuación.",
     "AnchCarril": "Anchura Carril",
     "AnchArcen": "Anchura Arcen",
-    "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa."
-
->>>>>>> d7e8d56568361e55cc3bd6024d6311c1d0159aa2
+    "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa.",
+    "orden": "Orden",
+    "sentido": "Sentido"
 }
