--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -110,40 +110,10 @@
     "CarreteraKO": "El nom de la carretera no és vàlid.",
     "descPDF": "Vols descarregar el PDF",
     "ActuacionKO": "Ja existeix l'actuació.",
-<<<<<<< HEAD
-=======
-    "NivelesInfluencia": "Nivell d'Influència",
     "CPA": "CPA",
     "Carril": "Carril",
     "Espesor": "Gruix (cm)",
-    "Arcen": "Voral",
-    "Firmes": "Ferms",
-    "Explanadas": "Esplanades",
-    "TerrenoNatural": "Terreny Natural",
-    "CategoriaExplanada": "Categoria Esplanada",
-    "CBR": "CBR",
-    "Relleno": "Farciment",
-    "Coronación": "Coronació",
-    "ClasifFuncRealRed": "Classificació funcional real/Xarxa",
-    "ClasifTecReal": "Classificació tècnica real",
-    "OrgConservacion": "Organisme de Conservació",
-    "OrgCompetente": "Organisme Competent",
-    "RegGestion": "Règim de Gestió",
-    "RegExplot": "Règim d'Explotació",
-    "ZonaTermica": "Zona Tèrmica",
-    "ZonaPluv": "Zona Pluviomètrica",
-    "Utilizada": "Utilizada",
-    "Longitud": "Longitud",
-    "ClaveObraKO": "Camp obligatori. El camp 'Clau d'obra' té caràcters no vàlids. Només es permeten lletres, números, espais, punts i guions fins a un màxim de longitud de 32.",
-    "FechaActuacionKO": "Camp obligatori. La data ha de ser anterior a la data actual.",
-    "CarrilesKO": "El nombre de carrils és incoherent amb la mena de calçada seleccionat.",
-    "GuardarActuacionOK": "L'actuació s'ha guardat correctament.",
-    "GuardarActuacionKO": "S'ha produït un error en guardar l'actuació.",
-    "AnchCarril": "Amplària carril",
-    "AnchArcen": "Amplària voral",
-    "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
     "TipoCalzKO": "Ha de seleccionar un tipus de calçada.",
->>>>>>> 82483c5f9371eeb19811e027bfa1dfcd272d9c7b
     "MIni": "M Ini",
     "DescIni": "Descripció Ini",
     "MFin": "M Fin",
@@ -175,8 +145,6 @@
     "arcen": "Arcén",
     "terrnat" : "Terreno natural",
     "cm": "cm",
-<<<<<<< HEAD
-    "CategExpl" : "Categorias Explanada",
     "NivelesInfluencia": "Nivell d'Influència",
     "Arcen": "Voral",
     "Firmes": "Ferms",
@@ -205,10 +173,7 @@
     "AnchArcen": "Amplària voral",
     "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
     "orden": "Ordre",
-    "sentido": "Sentit"
-=======
+    "sentido": "Sentit",
     "CategExpl" : "Categorias Explanada"
 
-
->>>>>>> 82483c5f9371eeb19811e027bfa1dfcd272d9c7b
 }
