--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -108,41 +108,10 @@
     "CarreteraKO": "El nombre de la carretera no es válido.",
     "ActuacionKO": "Ya existe la actuación.",
     "descPDF": "Quieres descargar el PDF",
-<<<<<<< HEAD
-=======
-    "NivelesInfluencia": "Nivel de Influencia",
     "CPA": "CPA",
     "Carril": "Carril",
     "Espesor": "Espesor (cm)",
-    "Arcen": "Arcén",
-    "Firmes": "Firmes",
-    "Explanadas": "Explanadas",
-    "TerrenoNatural": "Terreno Natural",
-    "CategoriaExplanada": "CategoriaExplanada",
-    "CBR": "CBR",
-    "Relleno": "Relleno",
-    "Coronación": "Coronación",
-    "ClasifFuncRealRed": "Clasificación funcional real/Red",
-    "ClasifTecReal": "Clasificación técnica real",
-    "OrgConservacion": "Organismo de Conservación",
-    "OrgCompetente": "Organismo Competente",
-    "RegGestion": "Régimen de Gestión",
-    "RegExplot": "Régimen de Explotación",
-    "ZonaTermica": "Zona Térmica",
-    "ZonaPluv": "Zona Pluviométrica",
-    "Utilizada": "Utilizada",
-    "Longitud": "Longitud",
-    "FilasCargadas": "Nº de filas cargadas: <1>{{FilasCargadas}}</1>",
-    "ClaveObraKO": "Campo obligatorio. El campo 'Clave de obra' tiene caracteres no válidos. Sólo se permiten letras, números, espacios, puntos y guiones hasta un máximo de longitud de 32.",
-    "FechaActuacionKO": "Campo obligatorio. La fecha debe ser anterior a la fecha actual.",
-    "CarrilesKO": "El número de carriles es incoherente con el tipo de calzada seleccionado.",
-    "GuardarActuacionOK": "La actuación se ha guardado correctamente.",
-    "GuardarActuacionKO": "Se ha producido un error al guardar la actuación.",
-    "AnchCarril": "Anchura Carril",
-    "AnchArcen": "Anchura Arcen",
-    "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa.",
     "TipoCalzKO": "Debe seleccionar un tipo de calzada.",
->>>>>>> 82483c5f9371eeb19811e027bfa1dfcd272d9c7b
     "MIni": "M Ini",
     "DescIni": "Descripción Ini",
     "MFin": "M Fin",
@@ -175,8 +144,6 @@
     "terrnat": "Terreno natural",
     "cbr": "CBR",
     "cm": "cm",
-<<<<<<< HEAD
-    "CategExpl" : "Categorias Explanada",
     "NivelesInfluencia": "Nivel de Influencia",
     "Arcen": "Arcén",
     "Firmes": "Firmes",
@@ -206,8 +173,6 @@
     "AnchArcen": "Anchura Arcen",
     "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa.",
     "orden": "Orden",
-    "sentido": "Sentido"
-=======
+    "sentido": "Sentido",
     "CategExpl" : "Categorias Explanada"
->>>>>>> 82483c5f9371eeb19811e027bfa1dfcd272d9c7b
 }
