--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -6,18 +6,18 @@
     "inises" : "Iniciar Sessió",
     "Home" : "Home",
     "gestTram" : "Gestió Trams",
-    "verEditCyT" : "Veure/Editar carreteres i trams",
-    "verEditDicT" : "Veure/Editar diccionaris de trams",   
+    "verEditCyT" : "Carreteres i trams",
+    "verEditDicT" : "Diccionaris de trams",   
     "impGraf" : "Importar graf/trams", 
-    "impAf" : "Importar Aforaments",
+    "impAf" : "Aforaments",
     "varAf" : "Veure aforaments",
-    "impAc" : "Importar actuacions",
+    "impAc" : "Actuacions",
     "crearAct" : "Crear actuacions",
     "verAct" : "Veure actuacions",
     "gestAusc" : "Gestió Auscultació",
     "comsDat" : "Consulta Dades",
     "Clasif" : "Classificacions",
-    "Evol" : "M. Evolució",
+    "Evol" : "Model Evolució",
     "Admin" : "Administració",
     "Docum" : "Documentació",
     "CerrarSes" : "Tancar Sessió",                   
