--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -7,17 +7,17 @@
     "Home" : "Home",
     "gestTram" : "Gestión Tramos",
     "impGraf" : "Importar grafo/tramos",
-    "verEditCyT" : "Ver/Editar carreteras y tramos",
-    "verEditDicT" : "Ver/Editar diccionarios de tramos",
-    "impAf" : "Importar Aforos",
+    "verEditCyT" : "Carreteras y tramos",
+    "verEditDicT" : "Diccionarios de tramos",
+    "impAf" : "Aforos",
     "varAf" : "Ver aforos",
-    "impAc" : "Importar actuaciones",
+    "impAc" : "Actuaciones",
     "crearAct" : "Crear actuaciones",
     "verAct" : "Ver actuaciones",
     "gestAusc" : "Gestión Auscultación",
     "comsDat" : "Consulta Datos",
     "Clasif" : "Clasificaciones",
-    "Evol" : "M. Evolución",
+    "Evol" : "Modelo Evolución",
     "Admin" : "Administración",
     "Docum" : "Documentación",
     "CerrarSes" : "Cerrar Sesión",
