--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -66,7 +66,7 @@
     "TipoFirme": "Tipus Firme",
     "TipoCalzada": "Tipus Calçada",
     "PkIniMayorFin": "El Pk inicial no pot ser major que el Pk final.",
-    "eliReg": "¿Estàs segur que vols eliminar el registre?",
+    "eliReg": "Estàs segur que vols eliminar el registre?",
     "edReg": "Editar registre",
     "insReg": "Insertar registre",
     "addRegist": "Afegir registre",
@@ -143,7 +143,7 @@
     "PosIni": "Posició Inicial",
     "PosFin": "Posició Final",
     "arcen": "Arcén",
-    "terrnat" : "Terreno natural",
+    "terrnat" : "Terreny natural",
     "cm": "cm",
     "NivelesInfluencia": "Nivell d'Influència",
     "Arcen": "Voral",
