--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -88,7 +88,7 @@
     "definicion_tramo": "Definición tramo",
     "ifa": "Ifa",
     "imd":"Imd",
-    "porc_pesados": "Porcentaje pesados",
+    "porc_pesados": "%pesados",
     "velocidad": "Velocidad",
     "anyomedida": "Año/Medida",
     "campanya": "Campaña",
@@ -174,5 +174,7 @@
     "EspesorKO": "Debe indicar el espesor, si ha seleccionado una capa.",
     "orden": "Orden",
     "sentido": "Sentido",
-    "CategExpl" : "Categorias Explanada"
+    "CategExpl" : "Categorias Explanada",
+    "CatTraf" : "Cat.Traf",
+    "imdp":"Imdp"
 }
