--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -89,7 +89,7 @@
     "definicion_tramo": "Definició tramo",
     "ifa": "Ifa",
     "imd":"Imd",
-    "porc_pesados": "Porcentaje pesados",
+    "porc_pesados": "%pesats",
     "velocidad": "Velocidat",
     "anyomedida": "Any/Mesura",
     "campanya": "Campanya",
@@ -174,6 +174,8 @@
     "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
     "orden": "Ordre",
     "sentido": "Sentit",
-    "CategExpl" : "Categorias Explanada"
+    "CategExpl" : "Categorias Explanada",
+    "CatTraf" : "Cat.Traf",
+    "imdp":"Imdp"
 
 }
