Errores Importar Excel (Aforos/Actuaciones)

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -81,7 +81,7 @@
     "GuardarCam": "Voleu desar els canvis editats?",
     "GuardarCamAdd": "Voleu desar els canvis afegits?",
     "VerImpAfor": "Veure/Importar Aforaments",
-    "region": "Regió",
+    "region": "Àmbit",
     "pk": "Pk",
     "poblacion": "Població",
     "tipo_estacion": "Tipus estació",
@@ -89,9 +89,9 @@
     "definicion_tramo": "Definició tramo",
     "ifa": "Ifa",
     "imd":"Imd",
-    "porc_pesados": "Porcentaje pesados",
+    "porc_pesados": "% Pesados",
     "velocidad": "Velocidat",
-    "anyomedida": "Any/Mesura",
+    "anyomedida": "Any Mesura",
     "campanya": "Campanya",
     "ImpAfr": "Importar Aforaments",	
     "ErrorGuardarAct": "S'ha produït un error en guardar l'actuació.",
@@ -107,9 +107,9 @@
     "ExcelOK": "L'arxiu s'ha carregat correctament.",
     "ExcelKO": "Error en pujar el fitxer.",
     "FormatoKO": "L'arxiu ha de ser de tipus .xls o .xlsx.",
-    "CarreteraKO": "El nom de la carretera no és vàlid.",
+    "CarreteraKO": "Error en la fila {{FilaKO}}: El nom de la carretera no és vàlid.",
     "descPDF": "Vols descarregar el PDF",
-    "ActuacionKO": "Ja existeix l'actuació.",
+    "ActuacionKO": "Error en la fila {{FilaKO}}: Ja existeix l'actuació.",
     "CPA": "CPA",
     "Carril": "Carril",
     "Espesor": "Gruix (cm)",
@@ -174,6 +174,16 @@
     "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
     "orden": "Ordre",
     "sentido": "Sentit",
-    "CategExpl" : "Categorias Explanada"
+    "CategExpl" : "Categorias Explanada",
+    "BBDDKO": "Error en la fila {{FilaKO}}: Error en guardar en BBDD.",
+    "FilasCargadasAct": "Nombre d'actuacions importades: {{NFilas}}",
+    "FilasNoCargadasAct": "Nombre d'actuacions no importades: {{NFilasKO}}",
+    "FilasCargadasAf": "Nombre d'aforaments importades: {{NFilas}}",
+    "FilasNoCargadasAf": "Nombre d'aforaments no importades: {{NFilasKO}}",
+    "CodigoKO":  "Error en la fila {{FilaKO}}: Error en el codi.",
+    "PkIniKO": "Error en la fila {{FilaKO}}: Error en el Pk Inicial.",
+    "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
+    "AnyoCampanyaKO": "Error en llegir l'any de la campanya.",
+    "RegionKO": "Error en la fila {{FilaKO}}: Error en el Ámbito."
 
 }
