--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -186,6 +186,13 @@
     "PkIniKO": "Error en la fila {{FilaKO}}: Error en el Pk Inicial.",
     "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
     "AnyoCampanyaKO": "Error en llegir l'any de la campanya.",
-    "RegionKO": "Error en la fila {{FilaKO}}: Error en el Ámbito."
-
+    "RegionKO": "Error en la fila {{FilaKO}}: Error en el Ámbito.",
+    "LoginKO": "L'usuari o la contrasenya són incorrectes.",
+    "SalirModalSave": "Es perdran els canvis sense guardar. Estàs segur que desitges abandonar la pàgina?",
+    "SalirModal": "Estàs segur que desitges abandonar la pàgina?",
+    "Salir": "Sortir",
+    "Permanecer": "Romandre",
+    "ConfGuardar": "Aquesta operació pot modificar els trams de la base de dades. Compte! Es modificaran els tipus de ferm de tots els trams involucrats ¿Desitja continuar?",
+    "Continuar": "Continuar",
+    "Cancelar": "Cancel·lar"
 }
