--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -185,5 +185,13 @@
     "PkIniKO": "Error en la fila {{FilaKO}}: Error en el Pk Inicial.",
     "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
     "AnyoCampanyaKO": "Error al leer el año de la campaña.",
-    "RegionKO": "Error en la fila {{FilaKO}}: Error en l'Àmbit."
+    "RegionKO": "Error en la fila {{FilaKO}}: Error en l'Àmbit.",
+    "LoginKO": "El usuario o la contraseña son incorrectos.",
+    "SalirModalSave": "Se perderán los cambios sin guardar. ¿Estás seguro de que deseas abandonar la página?",
+    "SalirModal": "¿Estás seguro de que deseas abandonar la página?",
+    "Salir": "Salir",
+    "Permanecer": "Permanecer",
+    "ConfGuardar": "Está operación puede modificar los tramos de la base de datos. ¡Cuidado!  se modificarán los tipos de firme de todos los tramos involucrados ¿Desea continuar?",
+    "Continuar": "Continuar",
+    "Cancelar": "Cancelar"
 }
