--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -63,7 +63,7 @@
     "AddAct" : "Nova Actuació",
     "TipoAct": "Tipus d'Actuació",
     "Tramo": "Tram",
-    "TipoFirme": "Tipus Firme",
+    "TipoFirme": "Tipus Ferm",
     "TipoCalzada": "Tipus Calçada",
     "PkIniMayorFin": "El Pk inicial no pot ser major que el Pk final.",
     "eliReg": "Estàs segur que vols eliminar el registre?",
@@ -125,7 +125,7 @@
     "long": "Longitud",
     "FechAlt": "Data Alta",
     "FechBaj": "Data Baixa",
-    "Firme": "Firme",
+    "Firme": "Ferm",
     "Expl" : "Explanadas", 
     "Afr" : "Aforaments",
     "VisInfTra": "Visualització de la Informació de Tram",
@@ -169,8 +169,8 @@
     "CarrilesKO": "El nombre de carrils és incoherent amb la mena de calçada seleccionat.",
     "GuardarActuacionOK": "L'actuació s'ha guardat correctament.",
     "GuardarActuacionKO": "S'ha produït un error en guardar l'actuació.",
-    "AnchCarril": "Amplària carril",
-    "AnchArcen": "Amplària voral",
+    "AnchCarril": "Amplària Carril",
+    "AnchArcen": "Amplària Voral",
     "EspesorKO": "Ha d'indicar el gruix, si ha seleccionat una capa.",
     "orden": "Ordre",
     "sentido": "Sentit",
@@ -194,5 +194,24 @@
     "Permanecer": "Romandre",
     "ConfGuardar": "Aquesta operació pot modificar els trams de la base de dades. Compte! Es modificaran els tipus de ferm de tots els trams involucrats ¿Desitja continuar?",
     "Continuar": "Continuar",
-    "Cancelar": "Cancel·lar"
+    "Cancelar": "Cancel·lar",
+    "Fresado": "Fresat",
+    "CapaBaseCarr": "Capa Base Carril",
+    "CapaSubBaseCarr": "Capa Subbase Carril",
+    "CapaIntCarr": "Capa Intermedia Carril",
+    "CapaRodCarr": "Capa Rodadura Carril",
+    "CapaBaseArc": "Capa Base Voral",
+    "CapaSubBaseArc": "Capa Subbase Voral",
+    "CapaIntArc": "Capa Intermèdia Voral",
+    "CapaRodArc": "Capa Rodadura Voral",
+    "DatosFirme": "Dades Ferm",
+    "DatosExplanada": "Dades Esplanada",
+    "EspCoronacion": "Gruix Coronació",
+    "EspRelleno": "Gruix Farciment",
+    "EspTerreno": "Gruix Terreny",
+    "CBRCoronacion": "CBR Coronació",
+    "CBRRelleno": "CBR Farciment",
+    "CBRTerreno": "CBR Terreny",
+    "InfoAct": "Informació de l'Actuació",
+    "Esps": "Gruix"
 }
