--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -149,7 +149,7 @@
     "Firmes": "Firmes",
     "Explanadas": "Explanadas",
     "TerrenoNatural": "Terreno Natural",
-    "CategoriaExplanada": "CategoriaExplanada",
+    "CategoriaExplanada": "Categoría Explanada",
     "CBR": "CBR",
     "Relleno": "Relleno",
     "Coronación": "Coronación",
@@ -193,5 +193,24 @@
     "Permanecer": "Permanecer",
     "ConfGuardar": "Está operación puede modificar los tramos de la base de datos. ¡Cuidado!  se modificarán los tipos de firme de todos los tramos involucrados ¿Desea continuar?",
     "Continuar": "Continuar",
-    "Cancelar": "Cancelar"
+    "Cancelar": "Cancelar",
+    "Fresado": "Fresado",
+    "CapaBaseCarr": "Capa Base Carril",
+    "CapaSubBaseCarr": "Capa Subbase Carril",
+    "CapaIntCarr": "Capa Intermedia Carril",
+    "CapaRodCarr": "Capa Rodadura Carril",
+    "CapaBaseArc": "Capa Base Arcen",
+    "CapaSubBaseArc": "Capa Subbase Arcen",
+    "CapaIntArc": "Capa Intermedia Arcen",
+    "CapaRodArc": "Capa Rodadura Arcen",
+    "DatosFirme": "Datos Firme",
+    "DatosExplanada": "Datos Explanada",
+    "EspCoronacion": "Espesor Coronación",
+    "EspRelleno": "Espesor Relleno",
+    "EspTerreno": "Espesor Terreno",
+    "CBRCoronacion": "CBR Coronación",
+    "CBRRelleno": "CBR Relleno",
+    "CBRTerreno": "CBR Terreno",
+    "InfoAct": "Información de la Actuación",
+    "Esps": "Espesor"
 }
