--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -186,6 +186,20 @@
     "PkIniKO": "Error en la fila {{FilaKO}}: Error en el Pk Inicial.",
     "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
     "AnyoCampanyaKO": "Error en llegir l'any de la campanya.",
-    "RegionKO": "Error en la fila {{FilaKO}}: Error en el Ámbito."
+    "RegionKO": "Error en la fila {{FilaKO}}: Error en el Ámbito.",
+    "PDFOK": "El PDF se ha generado correctamente.",
+    "PDFKO0": "ERROR durant la generació del ZIP.",
+    "PDFKO1": "ERROR BD TÍTOL, NO EXISTEIX CARRETERA.",
+    "PDFKO2": "ERROR, ERROR ESBORRAR TMP.",
+    "PDFKO3": "ERROR, ERROR ESBORRAR TMP.",
+    "PDFKO4": "ERROR, ERROR SENSE AUSCULTACIONS.",
+    "PDFKO5": "ERROR, ERROR CREAR ARXIU ZIP.",
+    "DELETEOK": "La carretera s'ha eliminat correctament.",
+    "DELETEKO": "ERROR BD TITOL, ERROR BD ELIMINA.",
+    "BAJATRAM": "Esteu segur que voleu eliminar aquestes dades i totes les seves dades associades?",
+    "BAJATRAMKO01": "ERROR BD TITOL, ERROR BD ELIMINA.",
+    "BAJATRAMKO02": "ERROR ESBORRAR KML. RUTA --> {{TramKO}}",
+    "BAJATRAMOK": "El tram s'ha donat de baixa correctament.",
+    "BAJATRAMKO00": "ERROR AL DONAR DE BAIXA UN TRAM."
 
 }
