--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -185,5 +185,19 @@
     "PkIniKO": "Error en la fila {{FilaKO}}: Error en el Pk Inicial.",
     "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
     "AnyoCampanyaKO": "Error al leer el año de la campaña.",
-    "RegionKO": "Error en la fila {{FilaKO}}: Error en l'Àmbit."
+    "RegionKO": "Error en la fila {{FilaKO}}: Error en l'Àmbit.",
+    "PDFOK": "El PDF se ha generado correctamente.",
+    "PDFKO0": "ERROR durante la generación del ZIP.",
+    "PDFKO1": "ERROR BD TITULO, NO EXISTE CARRETERA.",
+    "PDFKO2": "ERROR, ERROR BORRAR TMP.",
+    "PDFKO3": "ERROR, ERROR BORRAR TMP.",
+    "PDFKO4": "ERROR, ERROR SIN AUSCULTACIONES.",
+    "PDFKO5": "ERROR, ERROR CREAR ARCHIVO ZIP.",
+    "DELETEOK": "La Carretera se ha eliminado correctamente.",
+    "DELETEKO": "ERROR BD TITULO, ERROR BD ELIMINA.",
+    "BAJATRAM": "Está seguro de que desea eliminar estos datos y todos sus datos asociados?",
+    "BAJATRAMKO01": "ERROR BD TITULO, ERROR BD ELIMINA.",
+    "BAJATRAMKO02": "ERROR BORRAR KML. RUTA --> {{TramKO}}",
+    "BAJATRAMOK": "El Tramo se ha dado de baja correctamente.",
+    "BAJATRAMKO00": "ERROR AL DAR DE BAJA UN TRAMO."
 }
