--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -1,4 +1,5 @@
-{ 
+{
+    "applicationName": "GESTIÓ SISTEMATITZADA DE FERMS",
     "Acciones" : "Accions",
     "user" : "Usuari",
     "pass" : "Contrasenya",
@@ -228,5 +229,5 @@
     "CBRTerreno": "CBR Terreny",
     "InfoAct": "Informació de l'Actuació",
     "Esps": "Gruix"
-
+    
 }
