--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -1,4 +1,5 @@
-{   
+{
+    "applicationName": "GESTIÓN SISTEMATIZADA DE FIRMES",
     "Acciones" : "Acciones",
     "user" : "Usuario",
     "pass" : "Contraseña",
