Cargar actuaciones, correcciones

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -228,6 +228,18 @@
     "CBRRelleno": "CBR Farciment",
     "CBRTerreno": "CBR Terreny",
     "InfoAct": "Informació de l'Actuació",
-    "Esps": "Gruix"
-    
+    "Esps": "Gruix",
+    "ProcAforosKO": "Error en processar els aforaments i realitzar la tramificació.",
+    "TramificarKO": "Error a la base de dades en inserir una actuació: Error al tramificar un tram.",
+    "DescargarPlantilla": "Descarregar Plantilla",
+    "DescargarPlantillaKO": "No s'ha pogut descarregar el fitxer.",
+    "TipoActuacionKO": "Error en la fila {{FilaKO}}: El camp 'Tipus' és invàlid.",
+    "TerrenoNaturalKO": "Error en la fila {{FilaKO}}: El camp 'Terreny'  és invàlid.",
+    "CategExplanadaKO": "Error en la fila {{FilaKO}}: El camp 'Categoria'  és invàlid.",
+    "TipoFirmeKO": "Error en la fila {{FilaKO}}: El camp 'Tipus Ferm' és invàlid.",
+    "CapasFirmeKO": "Error en la fila {{FilaKO}}: Error en les capes del Ferm.",
+    "NivelInfluenciaKO": "Error en la fila {{FilaKO}}: El camp 'Entorno'  és invàlid.",
+    "PksKO": "Error en la fila {{FilaKO}}: El Pk inicial o final és invàlid.",
+    "TramosActivosKO": "Error en la fila {{FilaKO}}: No existeixen trams actius.",
+    "SentidoKO": "Error en la fila {{FilaKO}}: El camp 'Sentit' és invàlid."
 }
