--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -100,7 +100,7 @@
     "Creciente": "Creciente",
     "Decreciente": "Decreciente",
     "Observaciones": "Observaciones",
-    "SinTramAct": "No existen tramos con las opciones selccionadas.",
+    "SinTramAct": "No existen tramos con las opciones seleccionadas.",
     "SeleccionarTramos": "Seleccionar Tramos",
     "CamposObligatorios": "Todos los campos son obligatorios.",
     "ExcelOK": "El archivo se ha cargado correctamente.",
@@ -227,6 +227,18 @@
     "CBRRelleno": "CBR Relleno",
     "CBRTerreno": "CBR Terreno",
     "InfoAct": "Información de la Actuación",
-    "Esps": "Espesor"
-
+    "Esps": "Espesor",
+    "ProcAforosKO": "Error al procesar los aforos y realizar la tramificación.",
+    "TramificarKO": "Error en la base de datos al insertar una actuación: Error al tramificar un tramo.",
+    "DescargarPlantilla": "Descargar Plantilla",
+    "DescargarPlantillaKO": "No se ha podido descargar el fichero.",
+    "TipoActuacionKO": "Error en la fila {{FilaKO}}: El tipo de actuación es inválido.",
+    "TerrenoNaturalKO": "Error en la fila {{FilaKO}}: El campo 'Terreny' es inválido.",
+    "CategExplanadaKO": "Error en la fila {{FilaKO}}: El campo 'Categoria' es inválido.",
+    "TipoFirmeKO": "Error en la fila {{FilaKO}}: El campo 'Tipus Ferm' es inválido.",
+    "CapasFirmeKO": "Error en la fila {{FilaKO}}: Error en les capes del ferm.",
+    "NivelInfluenciaKO": "Error en la fila {{FilaKO}}: El campo 'Entorno' es inválido.",
+    "PksKO": "Error en la fila {{FilaKO}}: El Pk inicial o final es inválido.",
+    "TramosActivosKO": "Error en la fila {{FilaKO}}: No existen tramos activos.",
+    "SentidoKO": "Error en la fila {{FilaKO}}: El campo 'Sentit' es inválido."
 }
