--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -240,5 +240,13 @@
     "NivelInfluenciaKO": "Error en la fila {{FilaKO}}: El campo 'Entorno' es inválido.",
     "PksKO": "Error en la fila {{FilaKO}}: El Pk inicial o final es inválido.",
     "TramosActivosKO": "Error en la fila {{FilaKO}}: No existen tramos activos.",
-    "SentidoKO": "Error en la fila {{FilaKO}}: El campo 'Sentit' es inválido."
+    "SentidoKO": "Error en la fila {{FilaKO}}: El campo 'Sentit' es inválido.",
+    "EditTramo": "Edición de la información del tramo",
+    "DarBaja": "Dar de Baja",
+    "AddLaneFast": "Añadir carril rápido",
+    "AddLaneSlow": "Añadir carril lento",
+    "auscul":"Auscultaciones",
+    "DarAlta": "Dar de Alta",
+    "ALTATRAMKO00": "ERROR AL DAR DE ALTA UN TRAMO. ERROR AL ACTUALIZAR",
+    "ALTATRAMOK": "El Tramo se ha dado de alta correctamente."
 }
