--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -241,5 +241,12 @@
     "NivelInfluenciaKO": "Error en la fila {{FilaKO}}: El camp 'Entorno'  és invàlid.",
     "PksKO": "Error en la fila {{FilaKO}}: El Pk inicial o final és invàlid.",
     "TramosActivosKO": "Error en la fila {{FilaKO}}: No existeixen trams actius.",
-    "SentidoKO": "Error en la fila {{FilaKO}}: El camp 'Sentit' és invàlid."
+    "SentidoKO": "Error en la fila {{FilaKO}}: El camp 'Sentit' és invàlid.",
+    "EditTramo": "Edició de la informació del tram",
+    "DarBaja": "Donar de Baixa",
+    "AddLaneFast": "Afegir carril ràpid",
+    "AddLaneSlow": "Afegir carril lent",
+    "auscul":"Auscultacions",
+    "DarAlta": "Donar de Alta",
+    "ALTATRAMKO00": "ERROR AL DONAR D'ALTA UN TRAM. ERROR EN ACTUALITZAR"
 }
