eliminar caariles de editar tramo

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -248,5 +248,7 @@
     "AddLaneSlow": "Afegir carril lent",
     "auscul":"Auscultacions",
     "DarAlta": "Donar de Alta",
-    "ALTATRAMKO00": "ERROR AL DONAR D'ALTA UN TRAM. ERROR EN ACTUALITZAR"
+    "ALTATRAMKO00": "ERROR AL DONAR D'ALTA UN TRAM. ERROR EN ACTUALITZAR",
+    "DELCARRILKO":"Error en intentar eliminar el carril",
+    "DELCARRILOK":"El carril s'ha eliminat correctament"
 }
