eliminar carriles de editar tramo

--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -248,5 +248,7 @@
     "auscul":"Auscultaciones",
     "DarAlta": "Dar de Alta",
     "ALTATRAMKO00": "ERROR AL DAR DE ALTA UN TRAMO. ERROR AL ACTUALIZAR",
-    "ALTATRAMOK": "El Tramo se ha dado de alta correctamente."
+    "ALTATRAMOK": "El Tramo se ha dado de alta correctamente.",
+    "DELCARRILKO":"Error al intentar eliminar el carril",
+    "DELCARRILOK":"EL carril se ha eliminado correctamente"
 }
