--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -250,5 +250,7 @@
     "ALTATRAMKO00": "ERROR AL DAR DE ALTA UN TRAMO. ERROR AL ACTUALIZAR",
     "ALTATRAMOK": "El Tramo se ha dado de alta correctamente.",
     "DELCARRILKO":"Error al intentar eliminar el carril",
-    "DELCARRILOK":"EL carril se ha eliminado correctamente"
+    "DELCARRILOK":"EL carril se ha eliminado correctamente",
+    "SentDecre": "Sentido decreciente",
+    "SentCre": "Sentido creciente"
 }
