--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -250,5 +250,7 @@
     "DarAlta": "Donar de Alta",
     "ALTATRAMKO00": "ERROR AL DONAR D'ALTA UN TRAM. ERROR EN ACTUALITZAR",
     "DELCARRILKO":"Error en intentar eliminar el carril",
-    "DELCARRILOK":"El carril s'ha eliminat correctament"
+    "DELCARRILOK":"El carril s'ha eliminat correctament",
+    "SentDecre": "Sentit decreixent",
+    "SentCre": "Sentit creixent"
 }
