--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -252,5 +252,7 @@
     "DELCARRILKO":"Error en intentar eliminar el carril",
     "DELCARRILOK":"El carril s'ha eliminat correctament",
     "SentDecre": "Sentit decreixent",
-    "SentCre": "Sentit creixent"
+    "SentCre": "Sentit creixent",
+    "NoReg": "No s'han trobat registres.",
+    "NumCarrils": "Número Carrils"
 }
