--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -252,5 +252,7 @@
     "DELCARRILKO":"Error al intentar eliminar el carril",
     "DELCARRILOK":"EL carril se ha eliminado correctamente",
     "SentDecre": "Sentido decreciente",
-    "SentCre": "Sentido creciente"
+    "SentCre": "Sentido creciente",
+    "NoReg": "No se han encontrado registros.",
+    "NumCarrils": "Número Carriles"
 }
