--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -254,5 +254,6 @@
     "SentDecre": "Sentit decreixent",
     "SentCre": "Sentit creixent",
     "NoReg": "No s'han trobat registres.",
-    "NumCarrils": "Número Carrils"
+    "NumCarrils": "Número Carrils",
+    "EditAct": "Editar Actuació"
 }
