--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -25,7 +25,7 @@
     "fileOk" : "El archivo se ha guardado correctamente.",
     "fileKO" : "El archivo debe ser de tipo .xls o .xlsx.",
     "fileERR" : "Error al subir el fichero.",
-    "Cargar" : "Carregar",
+    "Cargar" : "Cargar",
     "ImpActs" : "Importar Actuaciones",
     "Act" : "Actuaciones",
     "Tipo" : "Tipo",
@@ -254,5 +254,6 @@
     "SentDecre": "Sentido decreciente",
     "SentCre": "Sentido creciente",
     "NoReg": "No se han encontrado registros.",
-    "NumCarrils": "Número Carriles"
+    "NumCarrils": "Número Carriles",
+    "EditAct": "Editar Actuación"
 }
