--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -255,5 +255,6 @@
     "SentCre": "Sentit creixent",
     "NoReg": "No s'han trobat registres.",
     "NumCarrils": "Número Carrils",
-    "EditAct": "Editar Actuació"
+    "EditAct": "Editar Actuació",
+    "SELTRAMKO": "El tram escollit no existeix"
 }
