--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -255,5 +255,6 @@
     "SentCre": "Sentido creciente",
     "NoReg": "No se han encontrado registros.",
     "NumCarrils": "Número Carriles",
-    "EditAct": "Editar Actuación"
+    "EditAct": "Editar Actuación",
+    "SELTRAMKO": "El tramos escogido no existe"
 }
