--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -256,5 +256,7 @@
     "NoReg": "No s'han trobat registres.",
     "NumCarrils": "Número Carrils",
     "EditAct": "Editar Actuació",
-    "SELTRAMKO": "El tram escollit no existeix"
+    "SELTRAMKO": "El tram escollit no existeix",
+    "EDITIONOK": "El tram s'ha editat correctament",
+    "EDITIONKO": "Error en intentar editar el tram"
 }
