--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -256,5 +256,7 @@
     "NoReg": "No se han encontrado registros.",
     "NumCarrils": "Número Carriles",
     "EditAct": "Editar Actuación",
-    "SELTRAMKO": "El tramos escogido no existe"
+    "SELTRAMKO": "El tramos escogido no existe",
+    "EDITIONOK": "El tramo se ha editado correctamente",
+    "EDITIONKO": "Error al intentar editar el tramo"
 }
