--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -258,5 +258,6 @@
     "EditAct": "Editar Actuació",
     "SELTRAMKO": "El tram escollit no existeix",
     "EDITIONOK": "El tram s'ha editat correctament",
-    "EDITIONKO": "Error en intentar editar el tram"
+    "EDITIONKO": "Error en intentar editar el tram",
+    "VALIDATEKO": "Si us plau, omple tots els camps correctament"
 }
