--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -258,5 +258,6 @@
     "EditAct": "Editar Actuación",
     "SELTRAMKO": "El tramos escogido no existe",
     "EDITIONOK": "El tramo se ha editado correctamente",
-    "EDITIONKO": "Error al intentar editar el tramo"
+    "EDITIONKO": "Error al intentar editar el tramo",
+    "VALIDATEKO": "Por favor, rellena todos los campos correctamente"
 }
