--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -259,5 +259,6 @@
     "SELTRAMKO": "El tram escollit no existeix",
     "EDITIONOK": "El tram s'ha editat correctament",
     "EDITIONKO": "Error en intentar editar el tram",
-    "VALIDATEKO": "Si us plau, omple tots els camps correctament"
+    "VALIDATEKO": "Si us plau, omple tots els camps correctament",
+    "AnalisAus": "Anàlisi Auscultacions"
 }
