--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -259,5 +259,6 @@
     "SELTRAMKO": "El tramos escogido no existe",
     "EDITIONOK": "El tramo se ha editado correctamente",
     "EDITIONKO": "Error al intentar editar el tramo",
-    "VALIDATEKO": "Por favor, rellena todos los campos correctamente"
+    "VALIDATEKO": "Por favor, rellena todos los campos correctamente",
+    "AnalisAus": "Análisis Auscultaciones"
 }
