--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -260,5 +260,26 @@
     "EDITIONOK": "El tram s'ha editat correctament",
     "EDITIONKO": "Error en intentar editar el tram",
     "VALIDATEKO": "Si us plau, omple tots els camps correctament",
-    "AnalisAus": "Anàlisi Auscultacions"
+    "AnalisAus": "Anàlisi Auscultacions",
+    "Linea": "Línia",
+    "DistOri": "Distància a Origen",
+    "DeflMaxIntCorr": "Defl. Màx. Int. Corregida",
+    "DeflMaxExtCorr": "Defl. Màx. Ext. Corregida",
+    "Incidencia": "Incidència",
+    "TempPavimento": "Temperatura Paviment (ºC)",
+    "RadiCurvMaxInt": "Radio Curv. Màx Eix Int.",
+    "RadiCurvMaxExt": "Radio Curv. Màx Eix Ext.",
+    "DeflMaxEjeInt": "Defl. Màx. No Corr. Eix Int.",  
+    "DeflMaxEjeExt": "Defl. Màx. No Corr. Eix Ext.",
+    "CoefTemp": "Coeficient Temperatura",
+    "CoefHum": "Coeficient Humitat",
+    "CoordX": "Coord. UTM: X",
+    "CoordY": "Coord. UTM: Y",
+    "NombrTram": "Nom del Tram",
+    "CodCarr": "Codi Carretera",
+    "Comanda": "Comanda",
+    "NumVia": "Número de Via",
+    "NumVias": "Nombre de Vies",
+    "PKInicial": "Pk Inicial",
+    "Analizar": "Analitzar"
 }
