--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -260,5 +260,26 @@
     "EDITIONOK": "El tramo se ha editado correctamente",
     "EDITIONKO": "Error al intentar editar el tramo",
     "VALIDATEKO": "Por favor, rellena todos los campos correctamente",
-    "AnalisAus": "Análisis Auscultaciones"
+    "AnalisAus": "Análisis Auscultaciones",
+    "Linea": "Línea",
+    "DistOri": "Distancia a Origen",
+    "DeflMaxIntCorr": "Defl. Máx. Interior Corregida",
+    "DeflMaxExtCorr": "Defl. Máx. Exterior Corregida",
+    "Incidencia": "Incidencia",
+    "TempPavimento": "Temperatura Pavimento (ºC)",
+    "RadiCurvMaxInt": "Radio Curv. Máx Eje Int.",
+    "RadiCurvMaxExt": "Radio Curv. Máx Eje Ext.",
+    "DeflMaxEjeInt": "Defl. Máx. No Corr. Eje Int.",  
+    "DeflMaxEjeExt": "Defl. Máx. No Corr. Eje Ext.",
+    "CoefTemp": "Coeficiente Temperatura",
+    "CoefHum": "Coeficiente Humedad",
+    "CoordX": "Coord. UTM: X",
+    "CoordY": "Coord. UTM: Y",
+    "NombrTram": "Nombre Tramo",
+    "CodCarr": "Código Carretera",
+    "Comanda": "Comanda",
+    "NumVia": "Número de Vía",
+    "NumVias": "Número de Vías",
+    "PKInicial": "Pk Inicial",
+    "Analizar": "Analizar"
 }
