fix data picker

--- a/public/locales/ca/global.json
+++ b/public/locales/ca/global.json
@@ -281,5 +281,6 @@
     "NumVia": "Número de Via",
     "NumVias": "Nombre de Vies",
     "PKInicial": "Pk Inicial",
-    "Analizar": "Analitzar"
+    "Analizar": "Analitzar",
+    "DATAKO": "Data d'alta invàlida"
 }
