--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -281,5 +281,6 @@
     "NumVia": "Número de Vía",
     "NumVias": "Número de Vías",
     "PKInicial": "Pk Inicial",
-    "Analizar": "Analizar"
+    "Analizar": "Analizar",
+    "DATAKO": "Fecha de alta inválida"
 }
