--- a/public/locales/es/global.json
+++ b/public/locales/es/global.json
@@ -187,7 +187,7 @@
     "PkFinKO": "Error en la fila {{FilaKO}}: Error en el Pk Final.",
     "AnyoCampanyaKO": "Error al leer el año de la campaña.",
     "RegionKO": "Error en la fila {{FilaKO}}: Error en l'Àmbit.",
-    "PDFOK": "El PDF se ha generado correctamente.",
+    "PDFOK": "El ZIP se ha generado correctamente.",
     "PDFKO0": "ERROR durante la generación del ZIP.",
     "PDFKO1": "ERROR BD TITULO, NO EXISTE CARRETERA.",
     "PDFKO2": "ERROR, ERROR BORRAR TMP.",
